# egodata

./: .gitignore  README.md  TODO.md  TODO2.md  pyproject.toml
.github/: copilot-instructions.md
assets/dex3_1/: dex3_1_right_teleop.yml
samples/egodex/: README.md
samples/egodex/charge_uncharge_airpods/: 45.hdf5
samples/egodex/lock_unlock_key/: 9.hdf5
samples/egodex/sort_beads/: 9.hdf5
samples/egodex/stock_unstock_fridge/: 14.hdf5
samples/egodex/vertical_pick_place/: 49.hdf5
scripts/: dex5_teleop_manus.py  download_public.sh  egodex_build_pretraining_dataset.py  egodex_extract_egoscale.py  egodex_retarget.py  egodex_retarget_dex3.py  egodex_retarget_dex5.py  egodex_visualize_skeleton.py  retarget_compare.py  sonic_hand_eval.py  sonic_hand_flow.py  sonic_hand_midtrain_sim.py  visualize_retargeted_dex3.py
src/motion_dataset_downloaders/: catalog.py  cli.py  downloader.py
