[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motion-dataset-downloaders"
version = "0.1.0"
description = "Dataset download helpers for public motion and hand datasets related to EgoScale and SONIC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
motion-datasets = "motion_dataset_downloaders.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]